--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
-  "name": "beer-necessities",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/lstuartfry/beer-necessities.git",
-  "author": "Lukas Stuart-Fry <lstuartfry@gmail.com>",
-  "license": "MIT"
+	"name": "beer-necessities",
+	"version": "1.0.0",
+	"main": "index.js",
+	"engines": {
+		"node": "12.13.1",
+		"yarn": "1.22.0"
+	},
+	"scripts": {
+		"dev": "nodemon ./server/index.js"
+	},
+	"repository": "https://github.com/lstuartfry/beer-necessities.git",
+	"author": "Lukas Stuart-Fry <lstuartfry@gmail.com>",
+	"license": "MIT",
+	"dependencies": {
+		"express": "^4.17.1",
+		"nodemon": "^2.0.2"
+	}
 }
