--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
 	"name": "beer-necessities",
 	"version": "1.0.0",
-	"main": "./server/index.js",
+	"main": "server/index.js",
 	"engines": {
 		"node": "12.13.1",
 		"yarn": "1.22.0"
 	},
 	"scripts": {
-		"dev": "nodemon ./server/index.js"
+		"client": "cd client && yarn start",
+		"server": "nodemon server/index.js",
+		"dev": "concurrently --kill-others \" yarn client\" \" yarn server\""
 	},
 	"repository": "https://github.com/lstuartfry/beer-necessities.git",
 	"author": "Lukas Stuart-Fry <lstuartfry@gmail.com>",
 	"license": "MIT",
 	"dependencies": {
 		"axios": "^0.19.2",
-		"express": "^4.17.1",
+		"express": "^4.17.1"
+	},
+	"devDependencies": {
+		"concurrently": "^5.1.0",
 		"nodemon": "^2.0.2"
 	}
 }
