--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
 		"@babel/preset-env": "^7.9.0",
 		"@babel/preset-react": "^7.9.1",
 		"babel-loader": "^8.1.0",
+		"babel-plugin-styled-components": "^1.10.7",
 		"css-loader": "^3.4.2",
 		"style-loader": "^1.1.3",
 		"webpack": "^4.42.0",
@@ -20,8 +21,10 @@
 		"webpack-dev-server": "^3.10.3"
 	},
 	"dependencies": {
+		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
-		"react-hot-loader": "^4.12.20"
+		"react-hot-loader": "^4.12.20",
+		"styled-components": "^5.0.1"
 	}
 }
