--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
 	"scripts": {
 		"start": "webpack-dev-server"
 	},
-	"proxy": "https://localhost:5000",
 	"license": "MIT",
 	"devDependencies": {
 		"@babel/cli": "^7.8.4",
@@ -21,10 +20,13 @@
 		"webpack-dev-server": "^3.10.3"
 	},
 	"dependencies": {
+		"axios": "^0.19.2",
+		"core-js": "3.6.4",
 		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-hot-loader": "^4.12.20",
+		"regenerator-runtime": "^0.13.5",
 		"styled-components": "^5.0.1"
 	}
 }
