--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
 		"babel-loader": "^8.1.0",
 		"babel-plugin-styled-components": "^1.10.7",
 		"css-loader": "^3.4.2",
+		"node-sass": "^4.13.1",
+		"sass-loader": "^8.0.2",
 		"style-loader": "^1.1.3",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.11",
