--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"yarn": "1.22.0"
 	},
 	"scripts": {
-		"client": "cd client && yarn start",
+		"client": "cd server/client && yarn start",
 		"server": "nodemon server/index.js",
 		"dev": "concurrently --kill-others \" yarn client\" \" yarn server\""
 	},
